# maggy

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETSTARTED.md  GETTING_STARTED.md  README.md  UNINSTALL.md  blog-data-sovereignty.md  comparision.md  install.sh  run_analysis.py
maggy/: .gitignore  CHANGELOG.md  PLAN.md  README.md  config.example.yaml  install.sh  pyproject.toml
maggy/.github/workflows/: integration.yml
maggy/_project_specs/todos/: architecture-hardening.md
maggy/docs/: benchmark-results.md  maggy-rfc.md  sidebar-navigation-design.md  visual-validation.md
maggy/maggy/: __init__.py  blueprint_extract.py  blueprint_store.py  budget.py  cli.py  cli_analytics.py  cli_bg_task.py  cli_blueprints.py  cli_chat.py  cli_client.py  cli_context.py  cli_output.py  cli_repl_cmds.py  cli_repl_info.py  cli_stream.py  cli_welcome.py  config.py  deploy.py  discovery.py  fatigue.py  main.py  memory_precedence.py  planning.py  provider_config.py  routing.py  routing_rules.py  routing_rules_defaults.py  routing_rules_io.py  scores.py  visual_check.py
maggy/maggy/adapters/: __init__.py  cli_discovery.py  cli_manifests.py  pi.py
maggy/maggy/api/: auth.py  routes.py  routes_aggregator.py  routes_approval.py  routes_blueprints.py  routes_budget.py  routes_chat.py  routes_chat_sessions.py  routes_cikg.py  routes_deploy.py  routes_editor.py  routes_engram.py  routes_escalation.py  routes_events.py  routes_forge.py  routes_heartbeat.py  routes_history.py  routes_icpg.py  routes_improve.py  routes_lexon.py  routes_mesh.py  routes_mesh_admin.py  routes_models.py  routes_observability.py  routes_orchestrator.py  routes_pipeline.py  routes_planning.py  routes_plugins.py  routes_pr_review.py  routes_process.py  routes_projects.py  routes_provider_config.py  routes_refresh.py  routes_routing.py  routes_setup.py  routes_skills.py  routes_srooter.py  routes_system.py  routes_usage.py  routes_users.py
maggy/maggy/cikg/: __init__.py  graph.py  models.py  queries.py
maggy/maggy/council/: __init__.py  audit_log.py  blast_analyzer.py  deliberation.py  executor_gate.py  models.py
maggy/maggy/engram/: __init__.py  diagnostics.py  record.py  retrieval.py  seed.py  store.py
maggy/maggy/event_spine/: __init__.py  emitter.py  events.py  header.py  store.py
maggy/maggy/forge/: __init__.py  connector.py  detector.py  registry.py
maggy/maggy/heartbeat/: __init__.py  jobs.py  jobs_extra.py  scheduler.py
maggy/maggy/history/: __init__.py  analyzer.py  models.py  service.py  store.py
maggy/maggy/improve/: __init__.py  analyzer.py  models.py  service.py  signals.py
maggy/maggy/learn/: _writer.py  chat_learner.py  config.py  consolidator.py  error_learner.py  pr_learner.py  review_learner.py
maggy/maggy/lexon/: __init__.py  disambiguate.py  personalization.py  record.py  router.py  terminology.py
maggy/maggy/mesh/: __init__.py  discovery.py  git_discovery.py  manager.py  memory.py  network.py  org_scanner.py  protocol.py  provenance.py  publisher.py  quarantine.py  store.py  sync.py  transport.py  ws_client.py  ws_server.py
maggy/maggy/mnemos/: __init__.py  _compat.py  activation.py  checkpoint.py  cli.py  cli_hooks.py  cli_nodes.py  db.py  (+20 more)
maggy/scripts/: test-autonomous.sh
maggy/src/: config.py  main.py
maggy/tests/: conftest.py  test_activity.py  test_agent_prompt.py  test_api_endpoints.py  test_approval.py  test_audit_log.py  test_auto_deps.py  test_benchmark_scenario.py  test_blast_analyzer.py  test_bootstrap.py  test_budget.py  test_build_in_public_reddit.py  test_build_in_public_voice.py  test_cascade.py  test_chat.py  test_chat_context.py  test_chat_executor_bridge.py  test_chat_grounding.py  test_chat_routed.py  test_chat_stream.py  test_chat_worktrees.py  test_checkpoint.py  test_cikg.py  test_cli.py  test_cli_chat.py  test_cli_context.py  test_cli_discovery.py  test_cli_manifests.py  test_cli_stream.py  test_cli_welcome.py  test_container_runner.py  test_context_compactor.py  test_convention_inferrer.py  test_convention_scanner.py  test_cortex_reader.py  test_council_config.py  test_council_models.py  test_deepseek_routing.py  test_deliberation.py  test_deploy.py  (+137 more)
(+280 files in other folders)
