[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maggy"
version = "0.1.0"
description = "Generic AI engineering command center — part of the Maggy platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maggy Contributors" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "anthropic>=0.40",
    "bcrypt>=4.1",
    "email-validator>=2.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
maggy = "maggy.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["maggy*"]
