[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Import package stays `maggy`; PyPI distribution name is `maggy-harness`
# because `maggy` is taken on PyPI (a Hopsworks hyperparameter library).
name = "maggy-harness"
version = "0.2.1"
description = "Maggy — a local AI engineering command center: multi-model routing, intent graph, memory, and a web dashboard for Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maggy Contributors" }]
keywords = ["ai", "llm", "claude", "agents", "code-review", "model-routing", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "anthropic>=0.40",
    "bcrypt>=4.1",
    "email-validator>=2.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
docs = ["openpyxl>=3.1", "python-docx>=1.0", "pymupdf>=1.24"]
reddit = ["asyncpraw>=7.7"]          # build-in-public Reddit agent
screenshots = ["playwright>=1.40"]   # dashboard/screenshot capture
# Agentic council PR reviewer (maggy.review). Provider SDKs cover the default
# roster: google-genai (Gemini chair/reviewer) + openai (GPT, and the
# OpenAI-compatible DeepSeek/Grok seats). Add groq/anthropic for those seats.
review = ["pydantic-ai>=1.0", "google-genai>=2.0", "openai>=1.40"]
all = [
    "openpyxl>=3.1", "python-docx>=1.0", "pymupdf>=1.24",
    "asyncpraw>=7.7", "playwright>=1.40",
    "pydantic-ai>=1.0", "google-genai>=2.0", "openai>=1.40",
]

[project.urls]
Homepage = "https://github.com/alinaqi/maggy"
Repository = "https://github.com/alinaqi/maggy"
Changelog = "https://github.com/alinaqi/maggy/blob/main/maggy/CHANGELOG.md"

[project.scripts]
maggy = "maggy.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["maggy*"]

[tool.setuptools.package-data]
# Ship the dashboard + any bundled non-Python assets inside the package.
maggy = [
    "static/*",
    "static/**/*",
    "prompt/*.md",
    "**/*.yaml",
    "**/*.yml",
]
